samples/_failures_safe/1761709995_74f3a2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36da78c6.c: In function ‘main’:
./samples/SAFE/__tmp_36da78c6.c:158:15: error: expected ‘;’ at end of input
  158 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_36da78c6.c:158:9: error: expected declaration or statement at end of input
  158 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_36da78c6.c:158:9: error: expected declaration or statement at end of input
